# DroneOS

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json
app/: package.json
app/components/: Dashboard.tsx
examples/components/: LandingPage.tsx
programs/identity-registry/: Cargo.toml
programs/identity-registry/src/: lib.rs
programs/oracle-verifier/: Cargo.toml
programs/oracle-verifier/src/: lib.rs
programs/payment-streams/: Cargo.toml
programs/payment-streams/src/: lib.rs
programs/swarm-coordinator/: Cargo.toml
programs/swarm-coordinator/src/: lib.rs
programs/task-market/: Cargo.toml
programs/task-market/src/: lib.rs
programs/token/: Cargo.toml
programs/token/src/: lib.rs
sdk/: package.json
sdk/src/: identity.ts  index.ts  market.ts  payments.ts  token.ts  types.ts
tests/: droneos.ts
