[package]
name = "payment-streams"
version = "1.0.0"
description = "$DRONEOS Payment Streams - X402 Real-time Micropayments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_streams"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
